manageridepats buttons style
shifting a nice design to ugly one.
have done it unwillingly

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1430,8 +1430,8 @@
                         //#endregion Status
 
                         //#region buttons
-                        editBtn = `<button type='button' class='edit btn btn-icon waves-effect waves-light btn-primary btn-sm m-r-5 m-b-5' id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='עריכה'><i class='ti-pencil'></i></button>`;
-                        deleteBtn = `<button type='button' class='remove btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5'id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='מחיקה'><i class='fa fa-remove'></i></button>`;
+                        editBtn = `<button type='button' class='edit btn btn-icon waves-effect waves-light btn-secondary btn-sm m-r-5 m-b-5' id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='עריכה'><i class='ti-pencil'></i></button>`;
+                        deleteBtn = `<button type='button' class='remove btn btn-icon waves-effect waves-light btn-secondary btn-sm m-b-5'id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='מחיקה'><i class='fa fa-remove'></i></button>`;
                         btnStr = `<div class='btnsInSameLine'>${editBtn} ${deleteBtn}</div>`;
                         //#endregion buttons
 
